--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,44 @@
         <module>SpringBase</module>
     </modules>
 
+    <properties>
+        <roo.version>1.1.0.RELEASE</roo.version>
+        <slf4j.version>1.6.1</slf4j.version>
+        <logback.version>0.9.26</logback.version>
+
+        <spring.version>4.3.0.RELEASE</spring.version>
+    </properties>
+
     <dependencies>
-
-
         <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-access</artifactId>
+        <version>${logback.version}</version>
+
+    </dependency>
+
+    <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.5</version>
@@ -26,14 +60,14 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.3.0.RELEASE</version>
+            <version>${spring.version}</version>
 
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.0.RELEASE</version>
+            <version>${spring.version}</version>
 
         </dependency>
     </dependencies>
