--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     </description>
     <modules>
         <module>SpringBase</module>
+        <module>SpringDataBase</module>
     </modules>
 
     <properties>
