--- a/SpringDataBase/pom.xml
+++ b/SpringDataBase/pom.xml
@@ -17,6 +17,11 @@
         <artifactId>spring-jdbc</artifactId>
         <version>${spring.version}</version>
     </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.6</version>
+    </dependency>
 
 </dependencies>
 </project>
