--- a/SpringDataBase/pom.xml
+++ b/SpringDataBase/pom.xml
@@ -22,6 +22,20 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>5.1.6</version>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>1.9.0.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jadira.usertype</groupId>
+        <artifactId>usertype.core</artifactId>
+        <version>5.0.0.GA</version>
+    </dependency>
+    <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.4.192</version>
+    </dependency>
 </dependencies>
 </project>
