--- a/SpringTasks/pom.xml
+++ b/SpringTasks/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>guava</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>org.abondar.experimental</groupId>
+            <artifactId>SpringDataBase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 
     </dependencies>
