Rest Demo operational

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,23 @@ hs_err_pid*
 .idea/
 springDemo.iml
 /Main/target
-
+.lst
 Main/target/
 lib/
+SpringAOP/src/test/
+SpringAOP/target/
+SpringBase/src/test/
+SpringBase/target/
+SpringDataBase/src/test/
+SpringDataBase/target/
+SpringHTTPInvoker/src/main/resources/
+SpringHTTPInvoker/src/test/
+SpringHTTPInvoker/target/SpringRemoting-1.0-SNAPSHOT/WEB-INF/classes/org/
+SpringHTTPInvoker/target/SpringRemoting-1.0-SNAPSHOT/WEB-INF/spring/
+SpringHTTPInvoker/target/classes/org/
+SpringHTTPInvoker/target/generated-sources/
+SpringHTTPInvoker/target/surefire/
+SpringRest/src/test/
+SpringTasks/src/main/resources/
+SpringTasks/src/test/
+SpringTasks/target/
