--- a/SpringRest/pom.xml
+++ b/SpringRest/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>SpringRest</artifactId>
 
  <dependencies>
+     <dependency>
+         <groupId>org.abondar.experimental</groupId>
+         <artifactId>SpringDataBase</artifactId>
+         <version>1.0-SNAPSHOT</version>
+     </dependency>
 
      <dependency>
          <groupId>javax.servlet</groupId>
