--- a/SpringRest/pom.xml
+++ b/SpringRest/pom.xml
@@ -58,6 +58,11 @@
          <artifactId>spring-beans</artifactId>
          <version>4.3.1.RELEASE</version>
      </dependency>
+     <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-core</artifactId>
+         <version>3.6.8.Final</version>
+     </dependency>
 
  </dependencies>
 
