--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>SpringTasks</module>
         <module>SpringHTTPInvoker</module>
         <module>SpringRest</module>
+        <module>SpringMVC</module>
     </modules>
 
     <properties>
