--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>SpringRest</module>
         <module>SpringMVC</module>
         <module>SpringWS</module>
+        <module>SpringBatch</module>
     </modules>
 
     <properties>
