renamed module to SpringData

--- a/SpringData/pom.xml
+++ b/SpringData/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>SpringDataBase</artifactId>
+    <artifactId>SpringData</artifactId>
 
 <dependencies>
     <dependency>
