--- a/SpringBoot/pom.xml
+++ b/SpringBoot/pom.xml
@@ -57,9 +57,16 @@
         <version>5.6.0</version>
         <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
-
-
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>2.9.2</version>
+    </dependency>
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>2.9.2</version>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
