spring boot kafka demo

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>SpringBatch</module>
         <module>SpringBoot</module>
         <module>SpringReactive</module>
+        <module>SpringBootKafka</module>
     </modules>
 
     <properties>
