--- a/SpringCloud/DemoApp/src/main/resources/application.properties
+++ b/SpringCloud/DemoApp/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8019
 spring.application.name=demo-app
 management.endpoints.web.exposure.include=refresh
+spring.cloud.config.enabled=true
+
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
