Cloud demo hystrix

--- a/SpringCloud/DemoApp/pom.xml
+++ b/SpringCloud/DemoApp/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>DemoApp</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-javanica</artifactId>
+            <version>1.5.18</version>
+
+        </dependency>
+    </dependencies>
 
 </project>
