--- a/SpringCloud/pom.xml
+++ b/SpringCloud/pom.xml
@@ -12,6 +12,7 @@
         <module>ConfigServer</module>
         <module>DemoApp</module>
         <module>ServiceDiscovery</module>
+        <module>ServiceGateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -49,12 +50,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka-server</artifactId>
-                <version>1.4.7.RELEASE</version>
-            </dependency>
-        
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
