--- a/SpringCloud/DemoApp/src/main/resources/application.properties
+++ b/SpringCloud/DemoApp/src/main/resources/application.properties
@@ -7,3 +7,8 @@ eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+spring.cloud.stream.kafka.binder.brokers=localhost
+
+spring.cloud.stream.bindings.output.destination=spring-demo
+spring.cloud.stream.bindings.output.content-type=application/json
