--- a/SpringHTTPInvoker/pom.xml
+++ b/SpringHTTPInvoker/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>org.abondar.experimental</groupId>
-            <artifactId>SpringDataBase</artifactId>
+            <artifactId>SpringData</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
