--- a/SpringBase/pom.xml
+++ b/SpringBase/pom.xml
@@ -12,4 +12,31 @@
     <artifactId>SpringBase</artifactId>
 <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.abondar.experimental</groupId>
+            <artifactId>Command</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                            <mainClass>org.abondar.experimental.springbase.Base</mainClass>
+                        </manifest>
+                    </archive>
+                    <finalName>spring-base</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
