--- a/SpringBatch/pom.xml
+++ b/SpringBatch/pom.xml
@@ -49,5 +49,27 @@
         </dependency>
 
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>org.abondar.experimental.springbatch.SpringBatchCommand</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <Class-Path>./lib</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                    <finalName>spring-batch</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
