--- a/SpringSecurity/src/main/resources/application.yml
+++ b/SpringSecurity/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+server:
+  port: 8090
+
+spring:
+    security:
+      oauth2:
+        resourceserver:
+          jwt:
+            jwk-set-uri: http://localhost:8080/realms/spring/protocol/openid-connect/certs
+            issuer-uri: http://localhost:8080/realms/spring
 jwt:
   secret: some-32-character-ultra-secure-and-ultra-long-secret
   issuer: Exerimental development team
