--- a/SpringSecurity/build.gradle
+++ b/SpringSecurity/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
     implementation("io.jsonwebtoken:jjwt-api:$jwtVersion")
     implementation("io.jsonwebtoken:jjwt-impl:$jwtVersion")
+    implementation("org.springdoc:springdoc-openapi-ui:$openApiVersion")
+    implementation("org.springdoc:springdoc-openapi-security:$openApiVersion")
 
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:$jwtVersion")
 
